fixed chrome extra space bug, again

--- a/public/stylesheets/bbase.css
+++ b/public/stylesheets/bbase.css
@@ -60,7 +60,6 @@ div#session-menu {
 
 #main {
   width: 800px;
-  display: inline-block;
   background-color: #333333;
 }
 
